# oxplow

./: .gitignore  CLAUDE.md  DEV.md  README.md  mise.toml  mkdocs.yml  package.json  pyproject.toml  tsconfig.json  ux-test.md
.context/: agent-model.md  architecture.md  code-quality.md  data-model.md  editor-and-monaco.md  external-url-tabs.md  git-integration.md  ipc-and-stores.md  pages-and-tabs.md  theming.md  usability.md
docs/: index.md  why.md
public/: index.html
src/: batch-store.test.ts  batch-store.ts  config.ts  daemon.test.ts  daemon.ts  events.ts  file-session.test.ts  file-session.ts  fleet.ts  git.ts  hook-ingest.test.ts  hook-ingest.ts  ids.ts  logger.test.ts  lsp.test.ts  lsp.ts  mcp-server.test.ts  mcp-server.ts  pty-bridge.ts  resume-tracker.test.ts  resume-tracker.ts  server.ts  session-files.test.ts  session-files.ts  state-db.ts  stream-store.test.ts  stream-store.ts  tmux-watch.test.ts  tmux.ts  work-item-store.ts  workspace-files.test.ts  workspace-files.ts  workspace-watch.test.ts  workspace-watch.ts
tests-e2e/: dogfood-agent-status-attr.ts  dogfood-approve.ts  dogfood-blame-ctxmenu.ts  dogfood-commit-as.ts  dogfood-commit-cv.ts  dogfood-commit-visibility.ts  dogfood-commit.ts  dogfood-ctx-menu.ts  dogfood-cycle-2.ts  dogfood-cycle-close.ts  dogfood-cycle.ts  dogfood-files-filter.ts  dogfood-filter-chip.ts  dogfood-hook-events-poke.ts  dogfood-probe.ts  dogfood-suppress-hook-noise.ts  dogfood-untracked-toggle.ts  drive-edit.ts  harness.ts  probe-approval.ts  probe-batch-lifecycle.ts  probe-center-tabs-testids.ts  probe-command-palette.ts  (+19 more)
(+336 files in other folders)
