[project]
name = "oxplow-docs"
version = "0.0.0"
description = "Documentation site for oxplow"
authors = [{ name = "Nathan Voxland", email = "nathan@voxland.net" }]
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }

[tool.poetry]
package-mode = false

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
pymdown-extensions = "^10.12.0"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-autorefs = "^1.4.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
